# volga-it-simbir-health

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
account/: .account-prod.env  Dockerfile  __init__.py  alembic.ini  pyproject.toml
account/app/: .account.env  config.py  database.py  exceptions.py  main.py
account/app/auth/: api.py  dependencies.py  hash_password.py  logic.py
account/app/auth/tokens/: info.py  models.py  service.py
account/app/docker/: app.sh
account/app/migrations/: env.py
account/app/migrations/versions/: 2dc35f456a89_add_ondelete_and_onupdate_in_refresh_.py  b15cf45f2919_add_refresh_tokens_model.py  fa739ca45b95_initial_migration.py
account/app/service/: base.py
account/app/users/: api.py  models.py  schemas.py  service.py
account/app/users/doctors/: api.py  service.py
account/docker/: app.sh
document/: .document-prod.env  Dockerfile  dto.py  pyproject.toml
document/app/: accounts.py  api.py  checkers.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  service.py
document/app/docker/: app.sh
document/app/migrations/: env.py
document/docker/: app.sh
document/elastic/: mappings.py  query.py  service.py
document/service/: base.py
hospital/: .hospital-prod.env  Dockerfile  alembic.ini
hospital/app/: config.py  database.py  exceptions.py  main.py
hospital/docker/: app.sh
timetable/: .timetable-prod.env  Dockerfile  pyproject.toml
timetable/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
timetable/docker/: app.sh
(+21 files in other folders)
